# prng

./: .gitignore  API_REFERENCE.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  bench_simd.c  benchmark.c  prng.py  prng_single_header.h  setup_bitgen.py  tempest_cuda.py  tempest_rng.py  test_bolt.c  test_tempest.c
.github/ISSUE_TEMPLATE/: benchmark_result.md  bug_report.md
.github/workflows/: benchmark.yml
bearssl_tempest/: README.md
botan_pr/: PR_GUIDE.md  submit_botan_pr.sh  tempest_rng.cpp
examples/: dice_roll.c  generate_token.c  monte_carlo.c  password_generator.c  uuid_generator.c
gnutls_tempest/: README.md
homebrew/: tempest-rng.rb
libtomcrypt_tempest/: ISSUE_TEMPLATE.md  Makefile.tempest  README.md  SUBMIT_BODY.md  tempest_prng.c  tempest_prng.h  tempest_test.c
mbedtls_tempest/: README.md
pypi_package/: pyproject.toml
pypi_package/src/tempest/: __init__.py  _rng.py  bench.py  tempest_v3.c  tempest_v3.h
results/: adcbolt_nist_report.txt  nist_tempest_v3_report.txt  tempest_v3_nist_report.txt
src/: _tempest_numpy.c  adcbolt.c  adcbolt.h  bitgen_tempest.c  kat_tempest.h  platform.h  tempest_cuda_kernel.cu  tempest_libsodium.c  tempest_openssl.c  tempest_simd.c  tempest_simd.h  tempest_v3.c  tempest_v3.h  tempest_v4.c  tempest_v4.h
tempest-rs/: Cargo.toml  README.md
tempest-rs/examples/: pi_estimation.rs
tempest-rs/src/: lib.rs
wolfssl_tempest/: ISSUE_TEMPLATE.md  README.md  tempest_wolfssl_patch.c
